# opengl-cmake-starter

./: CMakeLists.txt  README.md  main.c
